--- a/index-video.html
+++ b/index-video.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Takuya Matsuyama - Links</title>
+    <link rel="icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
