Small fixes and offers. 1) Added favicon.ico (Takuya's face image) to all pages. 2) When hovering over the entire button, cursor becomes pointer. Before: only hovering over link, cursor becomes pointer. 3) Added small opacity for button while hovering it.

--- a/index-vanta.html
+++ b/index-vanta.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Takuya Matsuyama - Links</title>
+    <link rel="icon" href="./images/favicon.ico"/>
     <link rel="stylesheet" href="./index.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.halo.min.js"></script>
