The target=_blank attribute is added to prevent the user from leaving the page.

--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
       </header>
       <ul>
         <li>
-          <a href="https://www.craftz.dog/">
+          <a href="https://www.craftz.dog/" target="_blank">
             <img src="./images/homepage.svg" alt="Homepage" width="20" />
             Official Website
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1">
+          <a href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1" target="_blank">
             <img src="./images/youtube.svg" alt="YouTube" width="20" />
             YouTube
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/inkdrop_app">
+          <a href="https://twitter.com/inkdrop_app" target="_blank">
             <img src="./images/twitter.svg" alt="Twitter" width="20" />
             Twitter
           </a>
         </li>
         <li>
-          <a href="https://github.com/craftzdog">
+          <a href="https://github.com/craftzdog" target="_blank">
             <img src="./images/github.svg" alt="GitHub" width="20" />
             GitHub
           </a>
