--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Takuya Matsuyama - Links</title>
+    <title>Nitre CBR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./index.css" />
-    <link rel="preload" href="./images/bg01.jpg" as="image" />
+    <link rel="preload" href="./images/bg01.jpeg" as="image" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
     <script>
@@ -40,32 +40,32 @@
     <div id="vanta"></div>
     <main class="animated">
       <header>
-        <img src="./images/takuya.jpg" />
-        <h1>@craftzdog</h1>
+        <img src="./images/nitre.jpg" />
+        <h1>@nitrecbr</h1>
       </header>
       <ul>
         <li>
-          <a href="https://www.craftz.dog/">
+          <a href="https://nitrecbr.github.io/link-in-bio">
             <img src="./images/homepage.svg" alt="Homepage" width="20" />
-            Official Website
+           Proximamente 
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1">
+          <a href="https://www.youtube.com/channel/UCLzwJgWPJmUOv2OE2ccvhPw">
             <img src="./images/youtube.svg" alt="YouTube" width="20" />
             YouTube
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/inkdrop_app">
-            <img src="./images/twitter.svg" alt="Twitter" width="20" />
-            Twitter
+          <a href="https://www.tiktok.com/@nitre19">
+            <img src="./images/tiktok.svg" alt="TikTok" width="20" />
+           TikTok 
           </a>
         </li>
         <li>
-          <a href="https://github.com/craftzdog">
-            <img src="./images/github.svg" alt="GitHub" width="20" />
-            GitHub
+          <a href="https://www.instagram.com/nitrecbr/">
+            <img src="./images/instagram.svg" alt="Instagram" width="20" />
+           Instagram 
           </a>
         </li>
       </ul>
