--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
     <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      VANTA.BIRDS({
-        el: "#vanta",
-        mouseControls: true,
-        touchControls: true,
-        gyroControls: true,
-        minHeight: 200.00,
-        minWidth: 200.00,
-        scale: 1.00,
-        scaleMobile: 1.00,
-        backgroundAlpha: 0.0,
-        color2: 0xff00f0,
-        wingSpan: 40.00,
-        separation: 100.00,
-        alignment: 77.00,
-        cohesion: 5.00,
-        quantity: 1.00
-      })
+      window.addEventListener("DOMContentLoaded", () => {
+        VANTA.BIRDS({
+          el: "#vanta",
+          mouseControls: true,
+          touchControls: true,
+          gyroControls: true,
+          minHeight: 200.0,
+          minWidth: 200.0,
+          scale: 1.0,
+          scaleMobile: 1.0,
+          backgroundAlpha: 0.0,
+          color2: 0xff00f0,
+          wingSpan: 40.0,
+          separation: 100.0,
+          alignment: 77.0,
+          cohesion: 5.0,
+          quantity: 1.0,
+        });
 
-      setTimeout(() => {
-        const main = document.querySelector('main')
-        main.style.opacity = 1
-        main.style.filter = 'blur(0px)'
-      }, 1000)
-    })
+        setTimeout(() => {
+          const main = document.querySelector("main");
+          main.style.opacity = 1;
+          main.style.filter = "blur(0px)";
+        }, 1000);
+      });
     </script>
   </head>
   <body>
@@ -51,9 +51,19 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1">
+          <a
+            href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1"
+          >
             <img src="./images/youtube.svg" alt="YouTube" width="20" />
-            YouTube
+            devaslife
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/playlist?list=PLFzcienOaLeMROdS1xgzPABodPZ4V4A0a&index=1&playnext=1"
+          >
+            <img src="./images/youtube.svg" alt="YouTube" width="20" />
+            Weekly vlog
           </a>
         </li>
         <li>
