--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -51,6 +51,12 @@
           </a>
         </li>
         <li>
+          <a href="https://www.craftz.dog/wallpapers">
+            <img src="./images/wallpapers.svg" alt="Wallpapers" width="20" />
+            Wallpapers
+          </a>
+        </li>
+        <li>
           <a
             href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1"
           >
@@ -63,13 +69,13 @@
             href="https://www.youtube.com/playlist?list=PLFzcienOaLeMROdS1xgzPABodPZ4V4A0a&index=1&playnext=1"
           >
             <img src="./images/youtube.svg" alt="YouTube" width="20" />
-            Weekly vlog
+            Second channel
           </a>
         </li>
         <li>
           <a href="https://twitter.com/inkdrop_app">
-            <img src="./images/twitter.svg" alt="Twitter" width="20" />
-            Twitter
+            <img src="./images/x-logo.svg" alt="X (Twitter)" width="20" />
+            X (Twitter)
           </a>
         </li>
         <li>
